Fix top right button spacing. Add popover for helper text. Fix visualization card.

--- a/src/js/components/Base/ToggleButtonGroup.sass
+++ b/src/js/components/Base/ToggleButtonGroup.sass
@@ -3,3 +3,7 @@
 .toggleButton
   &.coloredBorder
     border-left-width: 5px
+
+  &.iconButton
+    padding: 0 5px
+    max-height: 30px
